<resources>
    <string name="hurimoney">Wakati_kt</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_the_password">Forgot the Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="please_enter_your_pin_to_sign_in">Please enter your PIN to Sign in</string>
    <string name="proceed">Proceed</string>
    <string name="login_with_another_mobile_number">Login with Another Mobile Number</string>
    <string name="welcome">Welcome</string>
    <string name="hurimoney_agent">Hurimoney Agent</string>
    <string name="last_login">Last Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="update_account">Update Account</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="all">All</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="transaction">Transaction</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="transactions">Transactions</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="air_time">Air Time</string>
    <string name="last_5_transactions">Last 5 transactions</string>
    <string name="yesterday_21_november">Yesterday 21 November</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="failed">Failed</string>
    <string name="all_transactions">All transactions</string>
    <string name="accounts">Accounts</string>
    <string name="balance">Balance</string>
    <string name="total_balance">Total Balance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="saving_account">Saving Account</string>
    <string name="current_account">Current Account</string>
    <string name="bills">Bills</string>
    <string name="back">Back</string>
    <string name="account_registration">Account registration</string>
    <string name="please_read_and_agree_to_the_terms">Please read and agree to the terms</string>
    <string name="to_open_and_operate_the_mobile_account">to open and operate the mobile account</string>
    <string name="upload_document">Upload Document</string>
    <string name="create_a_powerful_and_unique_pin_as">Create a powerful and unique PIN as</string>
    <string name="this_is_used_for_all_your_future_financial">this is used for all your future financial</string>
    <string name="secure_pin_has_been_set_successfully">Secure PIN has been set successfully</string>
    <string name="zanele_okonkwo">Zanele Okonkwo</string>
    <string name="nin_number">NIN number</string>
    <string name="kmf">KMF</string>
    <string name="zuberimangwi">Zuberimangwi</string>
    <string name="experience_a_new_wave_of_progress_accessibility_and_speed_in_financial_services">Experience a new wave of Progress, Accessibility, and Speed in financial services</string>
    <string name="change_plan">Change plan</string>
    <string name="my_cards">My Cards</string>
    <string name="name_on_the_card">Name on the Card</string>
    <string name="card_type">Card Type</string>
    <string name="card_number">Card Number</string>
    <string name="delete_card">Delete Card</string>
    <string name="card">Card</string>
    <string name="card_screen">Card screen</string>
    <string name="failed_to_open_the_link">Failed to open the link.</string>
    <string name="scanned_data">Scanned Data:</string>
    <string name="error">Error</string>
    <string name="scan_a_qr_code_to_proceed">Scan a QR code to proceed.</string>
    <string name="ok_got_it">OK. Got it!</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="camera_access_is_required_to_take_photos">Camera access is required to take photos.</string>
    <string name="last_paid">Last paid</string>
    <string name="amount_amount_on_date">Amount: %1$s on %2$s</string>
    <string name="electricity_bill">Electricity bill</string>
    <string name="national_electricity_company_of_comoros_sonelec">National Electricity Company of Comoros (SONELEC)</string>
    <string name="pay_nbills">Pay\nBills</string>
    <string name="enter_client_id_or_subscriber_number">Enter Client ID or Subscriber number</string>
    <string name="recents">Recents</string>
    <string name="electricity_bill_for_the_month_of_july_2025">Electricity bill for the month of July 2025</string>
    <string name="subscriber_number">Subscriber Number</string>
    <string name="name">Name</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="due_date">Due date</string>
    <string name="amount">Amount</string>
    <string name="tax">Tax</string>
    <string name="total">TOTAL</string>
    <string name="select_payment">Select payment</string>
    <string name="add">Add</string>
    <string name="forgot_password">Forgot password</string>
    <string name="we_would_send_an_sms_n_on_your_registered_mobile_number_n_to_reset_password">We would send an SMS\non your registered mobile number\nto reset password</string>
    <string name="conti">Continue</string>
    <string name="please_enter_the_4_digit_code_that_has_been_sent_to">Please enter the 4 digit code that has been sent to</string>
    <string name="resend_code">Resend code</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="verify">Verify</string>
    <string name="amount_required">Amount required</string>
    <string name="please_enter_an_amount_to_generate_qr">Please enter an amount to generate QR.</string>
    <string name="generate_qr">Generate QR</string>
    <string name="message">Message</string>
    <string name="add_a_note">Add a note</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="your_qr_will_appear_here">Your QR will appear here</string>
    <string name="download">Download</string>
    <string name="download_statement">Download Statement</string>
    <string name="share">Share</string>
    <string name="password_must_be_at_least">Password must be at least 8 characters, including uppercase, lowercase, numbers, and symbols</string>
    <string name="transfer_nmoney">Transfer\nMoney</string>
    <string name="top_up">Top-up</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="international_transfers">International transfers</string>
    <string name="domestic_transfers">Domestic transfers</string>
    <string name="airtime_top_up">Airtime top-up</string>
    <string name="no_recent_transactions">No recent transactions</string>
    <string name="invalid_user">Invalid User</string>
    <string name="login_failed_please_try_again">Login failed. Please try again.</string>
    <string name="server_error_please_try_again_later">Server error. Please try again later.</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="by_checking_you_accept_your">By checking you accept your</string>
    <string name="general_conditions_of_use">General conditions of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="and">and</string>
    <string name="merchants">Merchants</string>
    <string name="my_qr_code">My QR code</string>
    <string name="primary_account_to_receive_money">Primary account to receive money</string>
    <string name="visa_4422">VISA **** **** **** 4422</string>
    <string name="available_balance_32_469_52_kmf">Available balance : 32,469.52 KMF</string>
    <string name="please_enter_your_pin_to_confirm_payment">Please enter your PIN to confirm payment</string>
    <string name="make_payment">Make Payment</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="your_payment_was_successful">Your payment was successful!</string>
    <string name="your_payment_is_made">Your payment is made</string>
    <string name="ref_0000000000">Ref: 0000000000</string>
    <string name="amount_128_kmf_on_2024_11_09_11_28">Amount: 128 KMF, on 2024-11-09 11:28</string>
    <string name="beneficiary_id_5555555">Beneficiary ID: 5555555</string>
    <string name="view_receipt">View Receipt</string>
    <string name="paybillreceipt">PaybillReceipt</string>
    <string name="payment_receipt">Payment Receipt</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="payment_date">Payment Date</string>
    <string name="make_another_payment">Make another payment</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="pay">Pay</string>
    <string name="payment_pin">Payment Pin</string>
    <string name="complete_payment">Complete payment</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="select_the_language_of_your_choice">Select the language of your choice</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="shikomori">Shikomori</string>
    <string name="select_language">Select Language</string>
    <string name="change_language">Change language</string>
    <string name="change_password">Change Password</string>
    <string name="change_pin">Change Pin</string>
    <string name="profile">Profile</string>
    <string name="select">Select</string>
    <string name="select_method">Select Method</string>
    <string name="cash">Cash</string>
    <string name="account">Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="phone">Phone</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="for_login_access">for login access</string>
    <string name="i_agree_to">I agree to</string>
    <string name="the_terms_and_conditions">the terms and conditions</string>
    <string name="and_the">and the</string>
    <string name="send_otp">Send OTP</string>
    <string name="cancel">Cancel</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="transfer_to_bank">Transfer to Bank</string>
    <string name="recipient_s_bank">Recipient\'s Bank</string>
    <string name="bank_name">Bank name</string>
    <string name="deposit_money">Deposit Money</string>
    <string name="enter_the_phone_number_of_the">Enter the \n user phone number</string>
    <string name="enter_the_phone_number_of_the_customer_to_whom_the_amount_is">enter the phone number of the \n customer to whom the amount is to \n be deposited</string>
    <string name="login_title">Login to your Account</string>
    <string name="please_accept_the_terms_conditions">Please accept the Terms &amp; Conditions</string>
    <string name="please_enter_the_pin">Please enter the PIN</string>
    <string name="forgot_pin">Forgot PIN</string>
</resources>