<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    tools:context=".dealer.DepositeMoneyActivity">


    <RelativeLayout
        android:id="@+id/jbcskd"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_26sdp"
        android:layout_height="@dimen/_50sdp">

        <LinearLayout
            android:id="@+id/back_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Back"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/deposit_money"
                android:textColor="@color/red_color"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/montserrat_bold" />
        </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wakati"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_10sdp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_phone_number_of_the"
        android:layout_below="@+id/jbcskd"
        android:minLines="2"
        android:textColor="@color/red_color"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_17sdp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="@dimen/_30sdp" />


    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_phone_number_of_the_customer_to_whom_the_amount_is"
        android:layout_below="@+id/text1"
        android:textColor="#2E2C2C"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginTop="@dimen/_10sdp" />


    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:background="@drawable/edittext_bg1"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:maxLength="7"
        android:fontFamily="@font/montserrat_regular"
        android:padding="@dimen/_10sdp"
        android:singleLine="true" />


    <TextView
        android:id="@+id/proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobile"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:padding="@dimen/_12sdp"
        android:text="@string/proceed"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/montserrat_medium" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />



</RelativeLayout>