<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:background="@color/white_color"
    tools:context=".customer.LoginPinActivity">


    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_130sdp"
        android:background="@drawable/top_bar"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_13sdp">




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcome_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/welcome"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/welcome_text"
                    android:layout_alignStart="@id/welcome_text"
                    android:text="@string/zanele_okonkwo"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_bold" />
            </LinearLayout>



    </RelativeLayout>


    <ImageView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_below="@id/top_bar"
        android:gravity="center"
        android:src="@drawable/otp_lock_icon"
        android:text="@string/please_enter_the_pin"
        android:textColor="@color/red_color"
        android:textSize="@dimen/_16ssp"
        />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/please_enter_your_pin_to_sign_in"
        android:textColor="#5E5252"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="@dimen/_13ssp" />


    <LinearLayout
        android:id="@+id/otp_boxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et1"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/border_bg"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et2"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/border_bg"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et3"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/border_bg"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et4"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/border_bg"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

    </LinearLayout>


    <TextView
        android:id="@+id/forgot_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otp_boxes"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/forgot_pin"
        android:textColor="@color/red_color"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="@dimen/_13ssp" />

    <TextView
        android:id="@+id/proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_pin"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="@dimen/_50sdp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:padding="@dimen/_12sdp"
        android:text="@string/proceed"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/montserrat_medium" />

    <TextView
        android:id="@+id/login_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proceed"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/login_with_another_mobile_number"
        android:textColor="@color/red_color"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="@dimen/_11ssp" />

</RelativeLayout>